--- a/scheduler/src/main/resources/templates/index.html
+++ b/scheduler/src/main/resources/templates/index.html
@@ -6,7 +6,7 @@
 <body>
 <div>
 <h1> 1학기 시간표 신청 </h1>
-    <form method="post" th:object="${classForm}" th:action="/submit">
+    <form method="get" action="/submit">
         <!--학생 이름-->
         <p>학생 이름을 써주세요 :)</p>
         <label for="studentName"></label>
@@ -71,9 +71,6 @@
         <div class="row">
             <div class="col">
                 <button type="submit">확인</button>
-            </div>
-            <div class="col">
-                <button type="button">취소</button>
             </div>
         </div>
     </form>
