--- a/scheduler/src/main/resources/templates/index.html
+++ b/scheduler/src/main/resources/templates/index.html
@@ -1,27 +1,66 @@
-<html lang="en" xmlns:th="http://www.thymeleaf.org">
+<html lang="ko" xmlns:th="http://www.thymeleaf.org">
 <head>
-    <meta charset="UTF-8">
-    <title>Title</title>
-
-    <style>
-
-        button[type="submit"] {
-            margin-top: 20px;
-            padding: 10px 20px;
-            background-color: #007bff;
-            color: #fff;
-            border: none;
-            border-radius: 5px;
-            cursor: pointer;
-        }
-    </style>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>Bootstrap demo</title>
+    <link href="/static/css/bootstrap.min.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link href="https://getbootstrap.com/docs/5.2/assets/css/docs.css" rel="stylesheet">
+    <title>Bootstrap Example</title>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
 </head>
+<style>
+    h1{
+        text-align: center;
+    }
+
+    .firstForm{
+        text-align:center;
+
+    }
+
+    .secondForm{
+        text-align:center;
+    }
+
+    .secondForm .date{
+
+    }
+
+    .date {
+        display: flex;
+        flex-direction: column;
+        margin-bottom: 20px;
+    }
+
+    .date p {
+        margin: 0 0 10px;
+        font-size: 20px;
+        font-weight: bold;
+    }
+
+    .form-check-label {
+        display: flex;
+        align-items: center;
+        margin-bottom: 10px;
+        font-size: 16px;
+    }
+
+    .form-check-label input {
+        margin-right: 10px;
+    }
+
+    .button{
+
+    }
+
+</style>
 <body>
-<div>
-<h1> 1학기 시간표 신청 </h1>
-    <form role = "form" action="/submit" method='post'>
+    <form role="form" action="/submit" method='post'>
+
+        <h1> 1학기 시간표 신청 </h1>
         <!--학생 이름-->
-        <div>
+        <div class="firstForm">
             <p>1 : 00 ~ 7 : 00 (마지막수업 6시)
                 수업은 아이의 당일 학습능력에따라 50~60분동안 진행됩니다.
             </p>
@@ -32,81 +71,107 @@
 
             <!-- 수업 회수 -->
             <p>주당 수업 횟수를 선택해 주세요</p>
-                <label for = "counts"></label>
-                <select name="counts" id ="counts" >
+            <label for="counts">
+                <select class="form-select" aria-label="Default select example" name="counts" id ="counts">
                     <option th:value="none">=== 선택 ===</option>
                     <option th:value="1">1회</option>
                     <option th:value="2">2회</option>
                     <option th:value="3">3회</option>
                     <option th:value="4">4회</option>
                     <option th:value="5">5회</option>
-                </select>
+                </select></label>
         </div>
 <!--        요일-->
-        <div>
-        <table>
-            <tr>
-                <th>월요일</th>
-                <td th:each="num : ${#numbers.sequence(1,6)}">
-                    <label th:unless="${ClassInMondayList.contains(num)}">
-                        <input type="radio"
-                                  th:text="오후+'&nbsp;'+${numStat.count}+'시'"
-                                  th:value="${numStat.count}"
-                                  name="Monday"></label></td>
+        <div class="secondForm">
+            <div class="date">
+                <p>월요일</p>
+                <div th:each="num : ${#numbers.sequence(1,6)}">
+                    <label class="form-check-label"
+                           th:unless="${ClassInMondayList.contains(num)}">
+                        <input class="form-check-input"
+                               type="radio"
+                               th:text="오후+'&nbsp;'+${numStat.count}+'시'"
+                               th:value="${numStat.count}"
+                               name="Monday"></label>
+                </div>
+                <label class="form-check-label">
+                    <input class="form-check-input"
+                           type="radio"
+                           th:value="0"
+                           name="Monday">등원하지 않습니다.
+                </label>
+            </div>
+            <div class="date">
+                <p>화요일</p>
+                <div th:each="num : ${#numbers.sequence(1,6)}">
+                    <label class="form-check-label" th:unless="${ClassInTuesdayList.contains(num)}">
+                        <input class="form-check-input"
+                               type="radio"
+                               th:text="오후+'&nbsp;'+${numStat.count}+'시'"
+                               th:value="${numStat.count}"
+                               name = "Tuesday"></label>
+                </div>
 
-                <td><label><input type="radio" th:value="0" name="Monday">등원하지 않습니다.</label></td>
-            </tr>
-            <tr>
-                <th>화요일</th>
-                <td th:each="num : ${#numbers.sequence(1,6)}">
-                    <label th:unless="${ClassInTuesdayList.contains(num)}">
-                        <input type="radio"
-                                  th:text="오후+'&nbsp;'+${numStat.count}+'시'"
-                                  th:value="${numStat.count}"
-                                  name = "Tuesday"></label></td>
-
-                <td><label><input type="radio" th:value="0" name="Tuesday">등원하지 않습니다.</label></td>
-            </tr>
-            <tr>
-                <th>수요일</th>
-                <td th:each="num : ${#numbers.sequence(1,6)}">
-                    <label th:unless="${ClassInWednesdayList.contains(num)}">
-                        <input type="radio"
+                <label class="form-check-label">
+                    <input class="form-check-input"
+                           type="radio"
+                           th:value="0"
+                           name="Tuesday">등원하지 않습니다.
+                </label>
+            </div>
+            <div class="date">
+                <p>수요일</p>
+                <div th:each="num : ${#numbers.sequence(1,6)}">
+                    <label class="form-check-label" th:unless="${ClassInWednesdayList.contains(num)}">
+                        <input class="form-check-input"
+                               type="radio"
+                               th:text="오후+'&nbsp'+${numStat.count}+시"
+                               th:value="${numStat.count}"
+                               name = "Wednesday"></label>
+                </div>
+                 <label class="form-check-label">
+                     <input class="form-check-input"
+                            type="radio"
+                            th:value="0"
+                            name="Wednesday">등원하지 않습니다.
+                 </label>
+            </div>
+            <div class="date">
+                <p>목요일</p>
+                <div th:each="num : ${#numbers.sequence(1,6)}">
+                    <label class="form-check-label" th:unless="${ClassInThursdayList.contains(num)}">
+                        <input class="form-check-input" type="radio"
                                   th:text="오후+'&nbsp'+${numStat.count}+시"
                                   th:value="${numStat.count}"
-                                  name = "Wednesday"></label></td>
+                                  name = "Thursday"></label></div>
 
-                 <td><label><input type="radio" th:value="0" name="Wednesday">등원하지 않습니다.</label></td>
-            </tr>
-            <tr>
-                <th>목요일</th>
-                <td th:each="num : ${#numbers.sequence(1,6)}">
-                    <label th:unless="${ClassInThursdayList.contains(num)}">
-                        <input type="radio"
+                <label class="form-check-label">
+                     <input class="form-check-input"
+                            type="radio"
+                            th:value="0"
+                            name="Thursday">등원하지 않습니다.
+                </label>
+            </div>
+            <div class="date">
+                <p>금요일</p>
+                <div th:each="num : ${#numbers.sequence(1,6)}">
+                    <label class="form-check-label" th:unless="${ClassInFridayList.contains(num)}">
+                        <input class="form-check-input" type="radio"
                                   th:text="오후+'&nbsp'+${numStat.count}+시"
                                   th:value="${numStat.count}"
-                                  name = "Thursday"></label></td>
+                                  name = "Friday"></label></div>
 
-                 <td><label><input type="radio" th:value="0" name="Thursday">등원하지 않습니다.</label></td>
-            </tr>
-            <tr>
-                <th>금요일</th>
-                <td th:each="num : ${#numbers.sequence(1,6)}">
-                    <label th:unless="${ClassInFridayList.contains(num)}">
-                        <input type="radio"
-                                  th:text="오후+'&nbsp'+${numStat.count}+시"
-                                  th:value="${numStat.count}"
-                                  name = "Friday"></label></td>
-
-                 <td><label><input type="radio" th:value="0" name="Friday">등원하지 않습니다.</label></td>
-            </tr>
-        </table>
+                 <label class="form-check-label">
+                     <input class="form-check-input"
+                            type="radio"
+                            th:value="0"
+                            name="Friday">등원하지 않습니다.
+                 </label>
+            </div>
         </div>
-
-        <div class="row">
-            <button type="submit">확인</button>
+        <div class="button">
+            <button type="submit" class="btn btn-primary">확인</button>
         </div>
     </form>
-</div>
 </body>
 </html>
