--- a/scheduler/src/main/resources/templates/index.html
+++ b/scheduler/src/main/resources/templates/index.html
@@ -1,30 +1,21 @@
-<html lang="ko" xmlns:th="http://www.thymeleaf.org">
+<!DOCTYPE HTML>
+<html xmlns:th="http://www.thymeleaf.org" lang="ko">
 <head>
     <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+<!--    <meta name="viewport" content="width=device-width, initial-scale=1">-->
     <title>Bootstrap demo</title>
-    <link href="/static/css/bootstrap.min.css">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet">
-    <link href="https://getbootstrap.com/docs/5.2/assets/css/docs.css" rel="stylesheet">
-    <title>Bootstrap Example</title>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
+    <link th:href="@{/css/bootstrap.min.css}"
+          href="../static/css/bootstrap.min.css" rel="stylesheet">
+
 </head>
 <style>
+
+    .container {
+        max-width: 560px;
+    }
+
     h1{
         text-align: center;
-    }
-
-    .firstForm{
-        text-align:center;
-
-    }
-
-    .secondForm{
-        text-align:center;
-    }
-
-    .secondForm .date{
-
     }
 
     .date {
@@ -49,40 +40,33 @@
     .form-check-label input {
         margin-right: 10px;
     }
-
-    .button{
-
+    .field-error {
+        border-color: #dc3545;
+        color: #dc3545;
     }
 
 </style>
 <body>
-    <form role="form" action="/submit" method='post'>
+<div class="container">
+    <form role="form" action="/submit" th:object="${class}" method='post'>
 
         <h1> 1학기 시간표 신청 </h1>
         <!--학생 이름-->
-        <div class="firstForm">
+        <div class="py-5 text-container">
             <p>1 : 00 ~ 7 : 00 (마지막수업 6시)
                 수업은 아이의 당일 학습능력에따라 50~60분동안 진행됩니다.
             </p>
 
             <p>학생 이름을 써주세요 :)</p>
             <label for="studentName"></label>
-            <input type="text" id="studentName" name="studentName" placeholder="내 답변">
-
-            <!-- 수업 회수 -->
-            <p>주당 수업 횟수를 선택해 주세요</p>
-            <label for="counts">
-                <select class="form-select" aria-label="Default select example" name="counts" id ="counts">
-                    <option th:value="none">=== 선택 ===</option>
-                    <option th:value="1">1회</option>
-                    <option th:value="2">2회</option>
-                    <option th:value="3">3회</option>
-                    <option th:value="4">4회</option>
-                    <option th:value="5">5회</option>
-                </select></label>
+            <input type="text" id="studentName" th:field="*{studentName}"
+                  th:errorclass="field-error" class="form-control" placeholder="이름을 정확히 입력하세요">
+            <div class="field-error" th:errors="*{studentName}">
+                필수 값입니다.
+            </div>
         </div>
-<!--        요일-->
-        <div class="secondForm">
+        <!--요일-->
+        <div class="py-5 text-center">
             <div class="date">
                 <p>월요일</p>
                 <div th:each="num : ${#numbers.sequence(1,6)}">
@@ -92,86 +76,117 @@
                                type="radio"
                                th:text="오후+'&nbsp;'+${numStat.count}+'시'"
                                th:value="${numStat.count}"
+                               th:field="*{monday}"
+                               th:errorclass="field-error"
                                name="Monday"></label>
                 </div>
                 <label class="form-check-label">
                     <input class="form-check-input"
                            type="radio"
                            th:value="0"
+                           th:field="*{monday}"
+                           th:errorclass="field-error"
                            name="Monday">등원하지 않습니다.
                 </label>
+                <div class="field-error" th:errors="*{monday}">
+                    필수값
+                </div>
             </div>
             <div class="date">
                 <p>화요일</p>
                 <div th:each="num : ${#numbers.sequence(1,6)}">
-                    <label class="form-check-label" th:unless="${ClassInTuesdayList.contains(num)}">
+                    <label class="form-check-label"
+                           th:unless="${ClassInTuesdayList.contains(num)}">
                         <input class="form-check-input"
                                type="radio"
                                th:text="오후+'&nbsp;'+${numStat.count}+'시'"
                                th:value="${numStat.count}"
+                               th:field="*{tuesday}"
+                               th:errorclass="field-error"
                                name = "Tuesday"></label>
                 </div>
-
                 <label class="form-check-label">
                     <input class="form-check-input"
                            type="radio"
                            th:value="0"
+                           th:field="*{tuesday}"
+                           th:errorclass="field-error"
                            name="Tuesday">등원하지 않습니다.
                 </label>
+                <div class="field-error" th:errors="*{tuesday}"></div>
             </div>
             <div class="date">
                 <p>수요일</p>
                 <div th:each="num : ${#numbers.sequence(1,6)}">
-                    <label class="form-check-label" th:unless="${ClassInWednesdayList.contains(num)}">
+                    <label class="form-check-label"
+                           th:unless="${ClassInWednesdayList.contains(num)}">
                         <input class="form-check-input"
                                type="radio"
                                th:text="오후+'&nbsp'+${numStat.count}+시"
                                th:value="${numStat.count}"
+                               th:field="*{wednesday}"
+                               th:errorclass="field-error"
                                name = "Wednesday"></label>
                 </div>
                  <label class="form-check-label">
                      <input class="form-check-input"
                             type="radio"
                             th:value="0"
+                            th:field="*{wednesday}"
+                            th:errorclass="field-error"
                             name="Wednesday">등원하지 않습니다.
                  </label>
+                <div class="field-error" th:errors="*{wednesday}"></div>
             </div>
             <div class="date">
                 <p>목요일</p>
                 <div th:each="num : ${#numbers.sequence(1,6)}">
-                    <label class="form-check-label" th:unless="${ClassInThursdayList.contains(num)}">
+                    <label class="form-check-label"
+                           th:unless="${ClassInThursdayList.contains(num)}">
                         <input class="form-check-input" type="radio"
-                                  th:text="오후+'&nbsp'+${numStat.count}+시"
-                                  th:value="${numStat.count}"
-                                  name = "Thursday"></label></div>
+                               th:text="오후+'&nbsp'+${numStat.count}+시"
+                               th:value="${numStat.count}"
+                               th:field="*{thursday}"
+                               th:errorclass="field-error"
+                               name = "Thursday"></label></div>
 
                 <label class="form-check-label">
                      <input class="form-check-input"
                             type="radio"
                             th:value="0"
+                            th:field="*{thursday}"
+                            th:errorclass="field-error"
                             name="Thursday">등원하지 않습니다.
                 </label>
+                <div class="field-error" th:errors="*{thursday}"></div>
             </div>
             <div class="date">
                 <p>금요일</p>
                 <div th:each="num : ${#numbers.sequence(1,6)}">
-                    <label class="form-check-label" th:unless="${ClassInFridayList.contains(num)}">
+                    <label class="form-check-label"
+                           th:unless="${ClassInFridayList.contains(num)}">
                         <input class="form-check-input" type="radio"
-                                  th:text="오후+'&nbsp'+${numStat.count}+시"
-                                  th:value="${numStat.count}"
-                                  name = "Friday"></label></div>
+                               th:text="오후+'&nbsp'+${numStat.count}+시"
+                               th:value="${numStat.count}"
+                               th:field="*{friday}"
+                               th:errorclass="field-error"
+                               name = "Friday"></label></div>
 
                  <label class="form-check-label">
                      <input class="form-check-input"
                             type="radio"
                             th:value="0"
+                            th:field="*{friday}"
+                            th:errorclass="field-error"
                             name="Friday">등원하지 않습니다.
                  </label>
+                <div class="field-error" th:errors="*{friday}"></div>
             </div>
-        </div>
+        </div><!--요일 끝-->
         <div class="button">
             <button type="submit" class="btn btn-primary">확인</button>
         </div>
     </form>
+</div><!-- container-->
 </body>
 </html>
