--- a/scheduler/src/main/resources/templates/index.html
+++ b/scheduler/src/main/resources/templates/index.html
@@ -7,56 +7,74 @@
     <link th:href="@{/css/bootstrap.min.css}"
           href="../static/css/bootstrap.min.css" rel="stylesheet">
 
+    <style>
+
+        .container {
+            max-width: 80em;
+        }
+
+        body { background-color: lightgoldenrodyellow; }
+
+        h1{
+            text-align: center;
+        }
+
+        .board, .monday, .tuesday, .wednesday, .thursday, .friday {
+            padding: 1em;
+            margin: 1em;
+            background-color: white;
+        }
+        .board p, .monday p, .tuesday p, .wednesday p, .thursday p, .friday p {
+            text-align: center;
+        }
+
+        .form-check-label {
+            display: flex;
+            align-items: center;
+            margin-bottom: 10px;
+            font-size: 16px;
+        }
+
+        .form-check-label input {
+            margin-right: 10px;
+        }
+
+        .field-error {
+            border-color: #dc3545;
+            color: #dc3545;
+        }
+
+    </style>
 </head>
-<style>
-
-    .container {
-        max-width: 20em;
-    }
-
-    h1{
-        text-align: center;
-    }
-
-    .form-check-label {
-        display: flex;
-        align-items: center;
-        margin-bottom: 10px;
-        font-size: 16px;
-    }
-
-    .form-check-label input {
-        margin-right: 10px;
-    }
-    .field-error {
-        border-color: #dc3545;
-        color: #dc3545;
-    }
-
-</style>
 <body>
 <div class="container">
     <form role="form" action="/submit" th:object="${class}" method='post'>
+        <div class="py-2">
+            <div class="header">
 
+
+            </div>
+        </div>
 
         <!--학생 이름-->
-        <div class="py-5 text-container">
-
-            <h1> 1학기 시간표 신청 </h1>
-            <p>1 : 00 ~ 7 : 00 (마지막수업 6시)
-                수업은 아이의 당일 학습능력에 따라 50~60분동안 진행됩니다.</p>
-
-
-            <p>학생 이름을 써주세요 :)</p>
-            <label for="studentName"></label>
-            <input type="text" id="studentName" th:field="*{studentName}"
-                  th:errorclass="field-error" class="form-control" placeholder="이름을 정확히 입력하세요">
-            <div class="field-error" th:errors="*{studentName}">
+        <div class="py-2">
+            <div class="board rounded-3 border border-2">
+                <h1> 1학기 시간표 신청 </h1>
+                <p>1 : 00 ~ 7 : 00 (마지막수업 6시)<br>
+                    수업은 아이의 당일 학습능력에 따라 50~60분동안 진행됩니다.</p>
+                <p>학생 이름을 써주세요 :)<br>
+                    이름을 정확히 입력하시면<br>
+                    다시 작성하실 때, 스케쥴을 번경하실 수 있습니다.</p>
+                <label for="studentName"></label>
+                <input type="text" id="studentName" th:field="*{studentName}"
+                      th:errorclass="field-error" class="form-control" placeholder="이름을 정확히 입력해주세요">
+                <div class="field-error" th:errors="*{studentName}"></div>
             </div>
         </div>
         <!--요일-->
-        <div class="py-2 text-center">
-            <div class="monday">
+        <div class="py-2">
+            <!--monday div start-->
+            <div class="monday rounded-3 border border-2">
                 <p>월요일</p>
                 <div th:each="num : ${#numbers.sequence(1,6)}">
                     <label class="form-check-label"
@@ -78,8 +96,10 @@
                            name="Monday">등원하지 않습니다.
                 </label>
                 <div class="field-error" th:errors="*{monday}"></div>
-            </div><!--monday div ends-->
-            <div class="tuesday">
+            </div>
+            <!--monday div ends-->
+            <!--tuesday div start-->
+            <div class="tuesday rounded-3 rounded-3 border border-2">
                 <p>화요일</p>
                 <div th:each="num : ${#numbers.sequence(1,6)}">
                     <label class="form-check-label"
@@ -102,7 +122,9 @@
                 </label>
                 <div class="field-error" th:errors="*{tuesday}"></div>
             </div>
-            <div class="wednesday">
+            <!--tuesday div ends-->
+            <!--wednesday div start-->
+            <div class="wednesday rounded-3 rounded-3 border border-2">
                 <p>수요일</p>
                 <div th:each="num : ${#numbers.sequence(1,6)}">
                     <label class="form-check-label"
@@ -125,7 +147,9 @@
                  </label>
                 <div class="field-error" th:errors="*{wednesday}"></div>
             </div>
-            <div class="thursday">
+            <!--wednesday div ends-->
+            <!--thursday div start-->
+            <div class="thursday rounded-3 rounded-3 border border-2">
                 <p>목요일</p>
                 <div th:each="num : ${#numbers.sequence(1,6)}">
                     <label class="form-check-label"
@@ -147,7 +171,9 @@
                 </label>
                 <div class="field-error" th:errors="*{thursday}"></div>
             </div>
-            <div class="friday">
+            <!--thursday div ends-->
+            <!--friday div start-->
+            <div class="friday rounded-3 rounded-3 border border-2">
                 <p>금요일</p>
                 <div th:each="num : ${#numbers.sequence(1,6)}">
                     <label class="form-check-label"
@@ -169,7 +195,9 @@
                  </label>
                 <div class="field-error" th:errors="*{friday}"></div>
             </div>
-        </div><!--요일 끝-->
+            <!--friday div ends-->
+        </div>
+        <!--요일 끝-->
         <div class="button">
             <button type="submit" class="btn btn-primary">확인</button>
         </div>
