--- a/scheduler/src/main/resources/templates/completion.html
+++ b/scheduler/src/main/resources/templates/completion.html
@@ -3,8 +3,45 @@
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
+    <link th:href="@{/css/bootstrap.min.css}"
+          href="../static/css/bootstrap.min.css" rel="stylesheet">
+    <style>
+        .container {
+            max-width: 80em;
+        }
+
+        body { background-color: lightgoldenrodyellow; }
+
+        h1{
+            text-align: center;
+        }
+
+        .form-check-label input {
+            margin-right: 10px;
+        }
+
+        .board{
+            padding: 1em;
+            margin: 1em;
+            background-color: white;
+        }
+
+        .board p{
+            text-align: center;
+        }
+    </style>
 </head>
 <body>
-완료
+<div class="container">
+    <div class="py-2">
+        <!--monday div start-->
+        <div class="board rounded-3 border border-2">
+            <h1> 수업 신청이 완료되었습니다. </h1>
+            <p>변경사항이 있을시 담당 선생님께<br>
+                문의해주세요.</p>
+
+        </div>
+    </div>
+</div>
 </body>
 </html>
