--- a/scheduler/src/main/resources/templates/index.html
+++ b/scheduler/src/main/resources/templates/index.html
@@ -6,9 +6,7 @@
     <title>Bootstrap demo</title>
     <link th:href="@{/css/bootstrap.min.css}"
           href="../static/css/bootstrap.min.css" rel="stylesheet">
-
     <style>
-
         .container {
             max-width: 80em;
         }
@@ -48,14 +46,13 @@
 </head>
 <body>
 <div class="container">
-    <form role="form" action="/submit" th:object="${class}" method='post'>
+    <form role="form" th:action="@{/submit}" th:object="${class}" method='post'>
         <div class="py-2">
             <div class="header">
 
 
             </div>
         </div>
-
         <!--학생 이름-->
         <div class="py-2">
             <div class="board rounded-3 border border-2">
@@ -85,21 +82,25 @@
                                th:value="${numStat.count}"
                                th:field="*{monday}"
                                th:errorclass="field-error"
-                               name="Monday"></label>
+                               name="monday">
+                    </label>
                 </div>
-                <label class="form-check-label">
-                    <input class="form-check-input"
-                           type="radio"
-                           th:value="0"
-                           th:field="*{monday}"
-                           th:errorclass="field-error"
-                           name="Monday">등원하지 않습니다.
-                </label>
+                <div>
+                    <label class="form-check-label">
+                        <input class="form-check-input"
+                               type="radio"
+                               th:value="0"
+                               th:field="*{monday}"
+                               th:errorclass="field-error"
+                               name="monday">
+                        등원하지 않습니다.
+                    </label>
+                </div>
                 <div class="field-error" th:errors="*{monday}"></div>
             </div>
             <!--monday div ends-->
             <!--tuesday div start-->
-            <div class="tuesday rounded-3 rounded-3 border border-2">
+            <div class="tuesday rounded-3 border border-2">
                 <p>화요일</p>
                 <div th:each="num : ${#numbers.sequence(1,6)}">
                     <label class="form-check-label"
@@ -110,7 +111,7 @@
                                th:value="${numStat.count}"
                                th:field="*{tuesday}"
                                th:errorclass="field-error"
-                               name = "Tuesday"></label>
+                               name = "tuesday"></label>
                 </div>
                 <label class="form-check-label">
                     <input class="form-check-input"
@@ -118,13 +119,13 @@
                            th:value="0"
                            th:field="*{tuesday}"
                            th:errorclass="field-error"
-                           name="Tuesday">등원하지 않습니다.
+                           name="tuesday">등원하지 않습니다.
                 </label>
                 <div class="field-error" th:errors="*{tuesday}"></div>
             </div>
             <!--tuesday div ends-->
             <!--wednesday div start-->
-            <div class="wednesday rounded-3 rounded-3 border border-2">
+            <div class="wednesday rounded-3 border border-2">
                 <p>수요일</p>
                 <div th:each="num : ${#numbers.sequence(1,6)}">
                     <label class="form-check-label"
@@ -135,7 +136,7 @@
                                th:value="${numStat.count}"
                                th:field="*{wednesday}"
                                th:errorclass="field-error"
-                               name = "Wednesday"></label>
+                               name = "wednesday"></label>
                 </div>
                  <label class="form-check-label">
                      <input class="form-check-input"
@@ -143,13 +144,13 @@
                             th:value="0"
                             th:field="*{wednesday}"
                             th:errorclass="field-error"
-                            name="Wednesday">등원하지 않습니다.
+                            name="wednesday">등원하지 않습니다.
                  </label>
                 <div class="field-error" th:errors="*{wednesday}"></div>
             </div>
             <!--wednesday div ends-->
             <!--thursday div start-->
-            <div class="thursday rounded-3 rounded-3 border border-2">
+            <div class="thursday rounded-3 border border-2">
                 <p>목요일</p>
                 <div th:each="num : ${#numbers.sequence(1,6)}">
                     <label class="form-check-label"
@@ -159,7 +160,7 @@
                                th:value="${numStat.count}"
                                th:field="*{thursday}"
                                th:errorclass="field-error"
-                               name = "Thursday"></label></div>
+                               name = "thursday"></label></div>
 
                 <label class="form-check-label">
                      <input class="form-check-input"
@@ -167,13 +168,13 @@
                             th:value="0"
                             th:field="*{thursday}"
                             th:errorclass="field-error"
-                            name="Thursday">등원하지 않습니다.
+                            name="thursday">등원하지 않습니다.
                 </label>
                 <div class="field-error" th:errors="*{thursday}"></div>
             </div>
             <!--thursday div ends-->
             <!--friday div start-->
-            <div class="friday rounded-3 rounded-3 border border-2">
+            <div class="friday rounded-3 border border-2">
                 <p>금요일</p>
                 <div th:each="num : ${#numbers.sequence(1,6)}">
                     <label class="form-check-label"
@@ -183,16 +184,16 @@
                                th:value="${numStat.count}"
                                th:field="*{friday}"
                                th:errorclass="field-error"
-                               name = "Friday"></label></div>
+                               name = "friday"></label></div>
 
-                 <label class="form-check-label">
+                <label class="form-check-label">
                      <input class="form-check-input"
                             type="radio"
                             th:value="0"
                             th:field="*{friday}"
                             th:errorclass="field-error"
-                            name="Friday">등원하지 않습니다.
-                 </label>
+                            name="friday">등원하지 않습니다.
+                </label>
                 <div class="field-error" th:errors="*{friday}"></div>
             </div>
             <!--friday div ends-->
