--- a/scheduler/src/main/resources/templates/index.html
+++ b/scheduler/src/main/resources/templates/index.html
@@ -56,6 +56,10 @@
         <!--학생 이름-->
         <div class="py-2">
             <div class="board rounded-3 border border-2">
+                <a href = "/search">
+                    <button type="button" class="btn btn-primary">수업 조회 및 변경</button>
+                </a><br><br>
+
                 <h1> 1학기 시간표 신청 </h1>
                 <p>1 : 00 ~ 7 : 00 (마지막수업 6시)<br>
                     수업은 아이의 당일 학습능력에 따라 50~60분동안 진행됩니다.</p>
