--- a/scheduler/src/main/resources/templates/findClass.html
+++ b/scheduler/src/main/resources/templates/findClass.html
@@ -1,11 +1,11 @@
 <!DOCTYPE HTML>
-<html xmlns:th="http://www.thymeleaf.org" lang="ko">
+<html lang="ko" xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta content="width=device-width, initial-scale=1" name="viewport">
     <title>Bootstrap demo</title>
-    <link th:href="@{/css/bootstrap.min.css}"
-          href="../static/css/bootstrap.min.css" rel="stylesheet">
+    <link href="../static/css/bootstrap.min.css"
+          rel="stylesheet" th:href="@{/css/bootstrap.min.css}">
     <style>
         .container {
             max-width: 80em;
@@ -46,30 +46,18 @@
 </head>
 <body>
 <div class="container">
-    <form role="form" th:action="@{/submit}" th:object="${class}" method='post'>
+    <form method='post' role="form" th:action="@{/modify}" th:object="${findClass}">
         <div class="py-2">
-            <div class="header">
 
-
-            </div>
         </div>
         <!--학생 이름-->
         <div class="py-2">
             <div class="board rounded-3 border border-2">
-                <a href = "/search">
-                    <button type="button" class="btn btn-primary">수업 조회 및 변경</button>
-                </a><br><br>
-
-                <h1> 1학기 시간표 신청 </h1>
-                <p>1 : 00 ~ 7 : 00 (마지막수업 6시)<br>
-                    수업은 아이의 당일 학습능력에 따라 50~60분동안 진행됩니다.</p>
-                <p>학생 이름을 써주세요 :)<br>
-                    이름을 정확히 입력하시면<br>
-                    다시 작성하실 때, 스케쥴을 번경하실 수 있습니다.</p>
-                <label for="studentName"></label>
-                <input type="text" id="studentName" th:field="*{studentName}"
-                      th:errorclass="field-error" class="form-control" placeholder="이름을 정확히 입력해주세요">
-                <div class="field-error" th:errors="*{studentName}"></div>
+                <div class="header">
+                    <label class="student" th:text="${classList.getStudentName()}">
+                    </label>
+                    <input name="studentName" th:value="${classList.getStudentName()}" type="hidden">
+                </div>
             </div>
         </div>
         <!--요일-->
@@ -78,23 +66,24 @@
             <div class="monday rounded-3 border border-2">
                 <p>월요일</p>
                 <div th:each="num : ${#numbers.sequence(1,6)}">
-                    <label class="form-check-label"
-                           th:unless="${ClassInMondayList.contains(num)}">
+                    <label class="form-check-label">
                         <input class="form-check-input"
-                               type="radio"
+                               name="monday"
+                               th:checked="${numStat.count==classList.getMonday()}"
+                               th:errorclass="field-error"
                                th:text="오후+'&nbsp;'+${numStat.count}+'시'"
                                th:value="${numStat.count}"
-                               name="monday"
-                               th:errorclass="field-error">
+                               type="radio">
                     </label>
                 </div>
                 <div>
                     <label class="form-check-label">
                         <input class="form-check-input"
-                               type="radio"
+                               name=monday
+                               th:checked="${classList.getMonday()==0}"
+                               th:errorclass="field-error"
                                th:value="0"
-                               name="monday"
-                               th:errorclass="field-error">
+                               type="radio">
                         등원하지 않습니다.
                     </label>
                 </div>
@@ -105,22 +94,23 @@
             <div class="tuesday rounded-3 border border-2">
                 <p>화요일</p>
                 <div th:each="num : ${#numbers.sequence(1,6)}">
-                    <label class="form-check-label"
-                           th:unless="${ClassInTuesdayList.contains(num)}">
+                    <label class="form-check-label">
                         <input class="form-check-input"
-                               type="radio"
+                               name="tuesday"
+                               th:checked="${numStat.count==classList.getTuesday()}"
+                               th:errorclass="field-error"
                                th:text="오후+'&nbsp;'+${numStat.count}+'시'"
                                th:value="${numStat.count}"
-                               name="tuesday"
-                               th:errorclass="field-error">
+                               type="radio">
                     </label>
                 </div>
                 <label class="form-check-label">
                     <input class="form-check-input"
-                           type="radio"
-                           th:value="0"
                            name="tuesday"
-                           th:errorclass="field-error">등원하지 않습니다.
+                           th:checked="${classList.getTuesday()==0}"
+                           th:errorclass="field-error"
+                           th:value="0"
+                           type="radio">등원하지 않습니다.
                 </label>
                 <div class="field-error" th:errors="*{tuesday}"></div>
             </div>
@@ -129,23 +119,24 @@
             <div class="wednesday rounded-3 border border-2">
                 <p>수요일</p>
                 <div th:each="num : ${#numbers.sequence(1,6)}">
-                    <label class="form-check-label"
-                           th:unless="${ClassInWednesdayList.contains(num)}">
+                    <label class="form-check-label">
                         <input class="form-check-input"
-                               type="radio"
+                               name="wednesday"
+                               th:checked="${numStat.count==classList.getWednesday()}"
+                               th:errorclass="field-error"
                                th:text="오후+'&nbsp'+${numStat.count}+시"
                                th:value="${numStat.count}"
-                               name="wednesday"
-                               th:errorclass="field-error">
+                               type="radio">
                     </label>
                 </div>
-                 <label class="form-check-label">
-                     <input class="form-check-input"
-                            type="radio"
-                            th:value="0"
-                            name="wednesday"
-                            th:errorclass="field-error">등원하지 않습니다.
-                 </label>
+                <label class="form-check-label">
+                    <input class="form-check-input"
+                           name="wednesday"
+                           th:checked="${classList.getWednesday()==0}"
+                           th:errorclass="field-error"
+                           th:value="0"
+                           type="radio">등원하지 않습니다.
+                </label>
                 <div class="field-error" th:errors="*{wednesday}"></div>
             </div>
             <!--wednesday div ends-->
@@ -153,21 +144,22 @@
             <div class="thursday rounded-3 border border-2">
                 <p>목요일</p>
                 <div th:each="num : ${#numbers.sequence(1,6)}">
-                    <label class="form-check-label"
-                           th:unless="${ClassInThursdayList.contains(num)}">
-                        <input class="form-check-input" type="radio"
+                    <label class="form-check-label">
+                        <input class="form-check-input" name="thursday"
+                               th:checked="${numStat.count==classList.getThursday()}"
+                               th:errorclass="field-error"
                                th:text="오후+'&nbsp'+${numStat.count}+시"
                                th:value="${numStat.count}"
-                               name="thursday"
-                               th:errorclass="field-error">
+                               type="radio">
                     </label>
                 </div>
                 <label class="form-check-label">
-                     <input class="form-check-input"
-                            type="radio"
-                            th:value="0"
-                            name="thursday"
-                            th:errorclass="field-error">등원하지 않습니다.
+                    <input class="form-check-input"
+                           name="thursday"
+                           th:checked="${classList.getThursday()==0}"
+                           th:errorclass="field-error"
+                           th:value="0"
+                           type="radio">등원하지 않습니다.
                 </label>
                 <div class="field-error" th:errors="*{thursday}"></div>
             </div>
@@ -176,30 +168,30 @@
             <div class="friday rounded-3 border border-2">
                 <p>금요일</p>
                 <div th:each="num : ${#numbers.sequence(1,6)}">
-                    <label class="form-check-label"
-                           th:unless="${ClassInFridayList.contains(num)}">
-                        <input class="form-check-input" type="radio"
+                    <label class="form-check-label">
+                        <input class="form-check-input" name="friday"
+                               th:checked="${numStat.count==classList.getFriday()}"
+                               th:errorclass="field-error"
                                th:text="오후+'&nbsp'+${numStat.count}+시"
                                th:value="${numStat.count}"
-                               name="friday"
-                               th:errorclass="field-error">
+                               type="radio">
                     </label>
                 </div>
 
                 <label class="form-check-label">
-                     <input class="form-check-input"
-                            type="radio"
-                            th:value="0"
-                            name="friday"
-                            th:errorclass="field-error">등원하지 않습니다.
+                    <input class="form-check-input"
+                           name="friday"
+                           th:checked="${classList.getFriday()==0}"
+                           th:errorclass="field-error"
+                           th:value="0"
+                           type="radio">등원하지 않습니다.
                 </label>
                 <div class="field-error" th:errors="*{friday}"></div>
             </div>
             <!--friday div ends-->
         </div>
-        <!--요일 끝-->
         <div class="button">
-            <button type="submit" class="btn btn-primary">확인</button>
+            <button class="btn btn-primary" type="submit">확인</button>
         </div>
     </form>
 </div><!-- container-->
