binding-result, css

--- a/scheduler/src/main/resources/templates/findClass.html
+++ b/scheduler/src/main/resources/templates/findClass.html
@@ -46,7 +46,7 @@
 </head>
 <body>
 <div class="container">
-    <form method='post' role="form" th:action="@{/modify}" th:object="${findClass}">
+    <form method='post' role="form" th:action="@{/modify}" th:object="${class}">
         <div class="py-2">
 
         </div>
