--- a/scheduler/src/main/resources/templates/index.html
+++ b/scheduler/src/main/resources/templates/index.html
@@ -198,7 +198,7 @@
             <!--friday div ends-->
         </div>
         <!--요일 끝-->
-        <div class="button">
+        <div class="text-end">
             <button type="submit" class="btn btn-primary">확인</button>
         </div>
     </form>
