--- a/scheduler/src/main/resources/templates/completion.html
+++ b/scheduler/src/main/resources/templates/completion.html
@@ -3,8 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
-    <link th:href="@{/css/bootstrap.min.css}"
-          href="../static/css/bootstrap.min.css" rel="stylesheet">
+    <link rel="stylesheet" th:href="@{/css/bootstrap.min.css}">
     <style>
         .container {
             max-width: 80em;
@@ -37,8 +36,8 @@
         <!--monday div start-->
         <div class="board rounded-3 border border-2">
             <h1> 수업 신청이 완료되었습니다. </h1>
-            <p>변경사항이 있을시 담당 선생님께<br>
-                문의해주세요.</p>
+            <p>변경사항이 있을시 입력한 이름으로 수정해주세요<br>
+                문의사항이 있을시 담당 선생님께 문의해주세요</p>
 
         </div>
     </div>
