--- a/scheduler/src/main/resources/templates/index.html
+++ b/scheduler/src/main/resources/templates/index.html
@@ -4,8 +4,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Bootstrap demo</title>
-    <link th:href="@{/css/bootstrap.min.css}"
-          href="../static/css/bootstrap.min.css" rel="stylesheet">
+    <link rel="stylesheet" th:href="@{/css/bootstrap.min.css}">
     <style>
         .container {
             max-width: 80em;
@@ -65,7 +64,7 @@
                     수업은 아이의 당일 학습능력에 따라 50~60분동안 진행됩니다.</p>
                 <p>학생 이름을 써주세요 :)<br>
                     이름을 정확히 입력하시면<br>
-                    다시 작성하실 때, 스케쥴을 번경하실 수 있습니다.</p>
+                    다시 작성하실 때, 스케쥴을 변경하실 수 있습니다.</p>
                 <label for="studentName"></label>
                 <input type="text" id="studentName" th:field="*{studentName}"
                       th:errorclass="field-error" class="form-control" placeholder="이름을 정확히 입력해주세요">
@@ -79,7 +78,7 @@
                 <p>월요일</p>
                 <div th:each="num : ${#numbers.sequence(1,6)}">
                     <label class="form-check-label"
-                           th:unless="${ClassInMondayList.contains(num)}">
+                           th:if="${!classInMondayList.contains(num)}">
                         <input class="form-check-input"
                                type="radio"
                                th:text="오후+'&nbsp;'+${numStat.count}+'시'"
@@ -106,7 +105,7 @@
                 <p>화요일</p>
                 <div th:each="num : ${#numbers.sequence(1,6)}">
                     <label class="form-check-label"
-                           th:unless="${ClassInTuesdayList.contains(num)}">
+                           th:if="${!classInTuesdayList.contains(num)}">
                         <input class="form-check-input"
                                type="radio"
                                th:text="오후+'&nbsp;'+${numStat.count}+'시'"
@@ -130,7 +129,7 @@
                 <p>수요일</p>
                 <div th:each="num : ${#numbers.sequence(1,6)}">
                     <label class="form-check-label"
-                           th:unless="${ClassInWednesdayList.contains(num)}">
+                           th:if="${!classInWednesdayList.contains(num)}">
                         <input class="form-check-input"
                                type="radio"
                                th:text="오후+'&nbsp'+${numStat.count}+시"
@@ -154,7 +153,7 @@
                 <p>목요일</p>
                 <div th:each="num : ${#numbers.sequence(1,6)}">
                     <label class="form-check-label"
-                           th:unless="${ClassInThursdayList.contains(num)}">
+                           th:if="${!classInThursdayList.contains(num)}">
                         <input class="form-check-input" type="radio"
                                th:text="오후+'&nbsp'+${numStat.count}+시"
                                th:value="${numStat.count}"
@@ -177,7 +176,7 @@
                 <p>금요일</p>
                 <div th:each="num : ${#numbers.sequence(1,6)}">
                     <label class="form-check-label"
-                           th:unless="${ClassInFridayList.contains(num)}">
+                           th:if="${!classInFridayList.contains(num)}">
                         <input class="form-check-input" type="radio"
                                th:text="오후+'&nbsp'+${numStat.count}+시"
                                th:value="${numStat.count}"
