--- a/scheduler/src/main/resources/templates/login.html
+++ b/scheduler/src/main/resources/templates/login.html
@@ -4,8 +4,7 @@
     <meta charset="utf-8">
     <meta content="width=device-width, initial-scale=1" name="viewport">
     <title>Bootstrap demo</title>
-    <link href="../static/css/bootstrap.min.css"
-          rel="stylesheet" th:href="@{/css/bootstrap.min.css}">
+    <link rel="stylesheet" th:href="@{/css/bootstrap.min.css}">
     <style>
         .container {
             max-width: 80em;
