--- a/scheduler/src/main/resources/templates/search.html
+++ b/scheduler/src/main/resources/templates/search.html
@@ -4,8 +4,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Bootstrap demo</title>
-    <link th:href="@{/css/bootstrap.min.css}"
-          href="../static/css/bootstrap.min.css" rel="stylesheet">
+    <link rel="stylesheet" th:href="@{/css/bootstrap.min.css}">
     <style>
         .container {
             max-width: 80em;
@@ -35,7 +34,7 @@
 </head>
 <body>
 <div class="container">
-    <form role="form" th:action="@{/findClass}" th:object="${class}" method='post'>
+    <form method='post' role="form" th:action="@{/search/findClass}" th:object="${studentClass}">
         <div class="py-2">
             <div class="header">
                 <br><br>
@@ -47,9 +46,7 @@
             <div class="board rounded-3 border border-2">
 
                 <h1> 시간표 조회 </h1>
-                <p>학생 이름을 써주세요 :)<br>
-                    이름을 정확히 입력하시면<br>
-                    다시 작성하실 때, 스케쥴을 번경하실 수 있습니다.</p>
+                <p>학생 이름을 입력해주세요 :)<br></p>
                 <label for="studentName"></label>
                 <input type="text" id="studentName" th:field="*{studentName}"
                        th:errorclass="field-error" class="form-control" placeholder="이름을 정확히 입력해주세요">
