--- a/scheduler/src/main/resources/templates/findClass.html
+++ b/scheduler/src/main/resources/templates/findClass.html
@@ -45,7 +45,7 @@
 </head>
 <body>
 <div class="container">
-    <form method='post' role="form" th:action="@{/search/modify}" th:object="${class}">
+    <form method='post' role="form" th:action="@{/search/modify}" th:object="${studentClass}">
         <div class="py-2">
 
         </div>
